<resources>
    <string name="app_name">Guess Quiz</string>

    <string name="skip">Skip</string>
    <string name="play_again">Play Again</string>
    <string name="you_scored">You Scored</string>
    <string name="title_text">guess the word!</string>
    <string name="play_button">Play</string>
    <string name="get_ready">Get ready to</string>
    <string name="got_it">Got it</string>
    <string name="end_game">End game</string>
    <string name="view_answer">View Answer</string>
    <string name="show_answer">Show Answer</string>
    <string name="word_is">The word is…</string>
</resources>