<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/get_ready"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_ready"
        android:textColor="@color/black_text_color"
        android:textSize="14sp"
        android:layout_centerInParent="true"
        android:textStyle="normal"/>

    <TextView
        android:id="@+id/title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_text"
        android:textSize="34sp"
        android:layout_below="@id/get_ready"
        android:layout_centerInParent="true"
        android:textColor="@color/black_text_color" />

    <Button
        android:id="@+id/play_game_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/play_button"
        android:theme="@style/GoButton"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"/>
</RelativeLayout>