<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/word_is_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/word_is"
        android:textColor="@color/black_text_color"
        android:textSize="14sp"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/word_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/word_is_text"
        android:layout_centerInParent="true"
        android:fontFamily="sans-serif"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textColor="@color/black_text_color"
        android:textSize="34sp"
        android:textStyle="normal"
        tools:text="Tuna" />

    <TextView
        android:id="@+id/score_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="90dp"
        android:textColor="@color/grey_text_color"
        android:textSize="14sp"
        tools:text="0" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/skip_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.5"
            android:text="@string/skip"
            android:theme="@style/SkipButton" />

        <Button
            android:id="@+id/correct_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="0.5"
            android:text="@string/got_it"
            android:theme="@style/GoButton" />

        <Button
            android:id="@+id/end_game_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.5"
            android:text="@string/end_game"
            android:theme="@style/SkipButton" />
    </LinearLayout>

    <Button
        android:id="@+id/view_answer_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:text="@string/view_answer"
        android:theme="@style/GoButton" />

    <TextView
        android:visibility="gone"
        android:id="@+id/view_answer_show"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/view_answer_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:layout_marginStart="48dp"
        android:hint="@string/show_answer"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:textColor="@color/grey_button_color" />
</RelativeLayout>